; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_syntax.c_highlight_list.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_syntax.c_highlight_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HLF_D = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @highlight_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @highlight_list() #0 {
  %1 = alloca i32, align 4
  store i32 10, i32* %1, align 4
  br label %2

2:                                                ; preds = %6, %0
  %3 = load i32, i32* %1, align 4
  %4 = add nsw i32 %3, -1
  store i32 %4, i32* %1, align 4
  %5 = icmp sge i32 %4, 0
  br i1 %5, label %6, label %11

6:                                                ; preds = %2
  %7 = load i32, i32* %1, align 4
  %8 = load i32, i32* @HLF_D, align 4
  %9 = call i32 @hl_attr(i32 %8)
  %10 = call i32 @highlight_list_two(i32 %7, i32 %9)
  br label %2

11:                                               ; preds = %2
  store i32 40, i32* %1, align 4
  br label %12

12:                                               ; preds = %16, %11
  %13 = load i32, i32* %1, align 4
  %14 = add nsw i32 %13, -1
  store i32 %14, i32* %1, align 4
  %15 = icmp sge i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %12
  %17 = call i32 @highlight_list_two(i32 99, i32 0)
  br label %12

18:                                               ; preds = %12
  ret void
}

declare dso_local i32 @highlight_list_two(i32, i32) #1

declare dso_local i32 @hl_attr(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
